# the_well

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  MANIFEST.in  README.md  data_registry.json  download_script.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  save_fig_and_gif.ipynb  test_interface.py  utils.py
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: linter.yaml  tests.yaml
2D/: README.md
2D/active_matter/: README.md  visualisation_active_matter.ipynb  visualization_active_matter.ipynb
2D/euler_quadrants/: READM.md  README.md  visualization_euler2d.ipynb  vizualiation_euler2d.ipynb
2D/helmholtz_staircase/: README.md  disprel.txt  load-hdf5-data-staircase.ipynb  visualization_Helmotz_staircase.ipynb
2D/rayleigh_benard/: README.md
2D/shear_flow/: README.md
2D/turbulent_radiative_layer/: visualization_TRML_2D.ipynb
2D/viscoelastic_instability/: README.md  examplePlot_data.ipynb
3D/: README.md
3D/MHD/: visualization_MHD.ipynb
3D/convective_envelope_rsg/: README.md  visualization_rsg.ipynb
3D/rayleigh_taylor_instability/: README.md  visualization_stefan_data.ipynb
3D/supernova_explosion/: README.md  visualization_supernova_explosion.ipynb
3D/supernova_explosion_128/: README.md  Transform.sh
3D/supernova_explosion_64/: transform.py  transform_example.ipynb
3D/turbulence_gravity_cooling/: HDF5_visualization.ipynb  README.md  visualization_TGC.ipynb
3D/turbulent_radiative_layer/: README.md  example_analysis.ipynb
api/: index.html
benchmarks/: index.html
data_format/: index.html
datasets/: README.md
datasets/MHD/: README.md  visualization_MHD.ipynb  viz_template.ipynb
datasets/MHD_256/: MHD_256.yaml  README.md  index.html  stats.yaml  visualization_MHD_256.ipynb
datasets/MHD_64/: MHD_64.yaml  README.md  index.html  stats.yaml  visualization_MHD.ipynb  (+1 more)
datasets_overview/: index.html
docs/: benchmarks.md  data_format.md  datasets_overview.md  getting_started.md  index.md  reference.md
output_slurm_stats/: 3732661_error  3732661_output
scripts/: DATASET_README_HEADER_TEMPLATE.md  README.md  ReadMe.md  check_data.py  check_data.sh  check_thewell_data.py  check_thewell_formatting.py  check_well_data.py  check_well_data.sh  compute_statistics.py  create_all_miniwell.sh  create_gif.py  create_miniwell.py  generate_metadata.py  plot_velocity.py  plot_velocity.sh  remove_trajectory.py
search/: search_index.json
tests/: conftest.py  test_augmentation.py  test_dataset.py  test_download.py  test_interface.py  test_metric.py  test_miniwell.py  test_models.py
the_well/: __init__.py
tutorials/: dataset.ipynb
workflows/: linter.yaml
(+348 files in other folders)
