[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["the_well"]

[project]
name = "the_well"
requires-python = ">=3.8"
version = "0.0.1"
readme = "README.md"

[project.optional-dependencies]
benchmark = [
    "torch>=2.1",
    "h5py>=3.9.0",
    "hydra-core",
    "einops",
]

[project.scripts]
the-well-download = "the_well.utils.download_script:main"

[tool.isort]
profile = "black"