[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["the_well*"]

[project]
name = "the_well"
requires-python = ">=3.10"
version = "0.0.1"
readme = "README.md"
dependencies = [
    "einops>=0.8,<0.9",
    "h5py>=3.9.0,<4",
    "numpy>=1.20,<3",
    "torch>=2.1,<3",
]

[project.scripts]
the-well-download = "the_well.utils.download_script:main"

[project.optional-dependencies]
benchmark = [
    "hydra-core>=1.3,<2",
    "matplotlib>=3.8,<4",
    "neuraloperator==0.3.0",
    "omegaconf>=2.0,<3",
    "plotly>=5.0,<6",
    "timm>=1.0,<2",
    "torch_harmonics>=0.6,<0.7",
    "wandb>=0.17.9,<0.18",
    "torchinfo",
]
dev = [
    "pre-commit",
    "pytest",
    "pytest-order",
    "ruff",
]

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "W"]

[tool.ruff.lint.extend-per-file-ignores]
"datasets/**/*.py" = ["F841"]
